--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 					<nav>
 						<ul>
 							<li><a href="#intro">Welcome</a></li>
-							<li><a href="#one">Who we are</a></li>
+							<li><a href="#one">Modelling Software</a></li>
 							<li><a href="#two">What we do</a></li>
 							<li><a href="#three">Get in touch</a></li>
 						</ul>
@@ -35,9 +35,11 @@
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
 							<h1>Hi there!</h1>
-							<p>I have dedicated this space for explaining how I have developed the codes 
+							<p>I am Daniel Astudillo Manosalva, PhD student at UF and 
+								 have dedicated this space for explaining how I have developed the codes 
 								I have used for automating the processing of multiple compositions through pMELTS
-								 MAGPOX and Perple_X for creating the phase diagrams I have used in my work.</p>
+								 MAGPOX and Perple_X for creating the phase diagrams I have used in my work shown 
+								 here at LPSC 2022 and a soon to come publication.</p>
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">Learn more</a></li>
 							</ul>
