--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 				<!-- Intro -->
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
-							<h1>Hi there!</h1>
+							<h1>Hello there!</h1>
 							<p>I am Daniel Astudillo Manosalva, PhD student at UF and 
 								 have dedicated this space for explaining how I have developed the codes 
 								I have used for automating the processing of multiple compositions through pMELTS
@@ -130,7 +130,7 @@
 					</section>
 
 				<!-- Three -->
-					<section id="three" class="wrapper style1 fade-up">
+					<!-- <section id="three" class="wrapper style1 fade-up">
 						<div class="inner">
 							<h2>Get in touch</h2>
 							<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
@@ -188,7 +188,7 @@
 						</div>
 					</section>
 
-			</div>
+			</div> -->
 
 		<!-- Footer -->
 			<footer id="footer" class="wrapper style1-alt">
@@ -200,13 +200,13 @@
 			</footer>
 
 		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
+			<!-- <script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.scrollex.min.js"></script>
 			<script src="assets/js/jquery.scrolly.min.js"></script>
 			<script src="assets/js/browser.min.js"></script>
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+			<script src="assets/js/main.js"></script> -->
 
 	</body>
 </html>
