--- a/index.html
+++ b/index.html
@@ -186,9 +186,9 @@
 								</section>
 							</div>
 						</div>
-					</section>
+					</section> -->
 
-			</div> -->
+			</div>
 
 		<!-- Footer -->
 			<footer id="footer" class="wrapper style1-alt">
