--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 								 MAGPOX and Perple_X for creating the phase diagrams I have used in my work shown 
 								 here at LPSC 2022 and a soon to come publication.</p>
 							<ul class="actions">
-								<li><a href="#one" class="button scrolly">Learn more</a></li>
+								<li><a href="#one" class="button scrolly">See What software we used!</a></li>
 							</ul>
 						</div>
 					</section>
@@ -53,7 +53,7 @@
 							<div class="content">
 								<div class="inner">
 									<h2>pMELTS</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<p>Probably the most popular tool for modelling fractional and equilibrium crystallization</p>
 									<ul class="actions">
 										<li><a href="generic.html" class="button">Learn more</a></li>
 									</ul>
