--- a/Perple_X.html
+++ b/Perple_X.html
@@ -13,15 +13,17 @@
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
-
+		<div>
+			<a href="https://www.ufexpet.com/"><img src="images/Round-Logo_White.png" class="logo"/></a>
+		</div>
 		<!-- Header -->
 			<header id="header">
 				<a href="index.html" class="title">Evolving Software</a>
 				<nav class="navbar">
 					<ul>
 						<li><a href="index.html">Home</a></li>
-						<li><a href="generic.html" class="active">Generic</a></li>
-						<li><a href="elements.html">Elements</a></li>
+						<li><a href="MAGPOX.html">MAGPOX</a></li>
+						<li><a href="pmelts.html">pMELTS</a></li>
 					</ul>
 				</nav>
 			</header>
@@ -33,7 +35,10 @@
 					<section id="main" class="wrapper">
 						<div class="inner">
 							<h1 class="major">How we used Perple_X</h1>
-							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
+							<span class="image fit"><img src="images/plot3.png" alt="" /></span>
+							<ul class="actions">
+								<li><a href="#code" class="button scrolly">Check our code</a></li>
+							</ul>
 							<h2>How Perple_X works</h2>
 							<p>
 								Perple_X works by creating an initializer file through a function called "build" where you define 
@@ -88,7 +93,7 @@
 							</p>
 							<h2>A tool in the shed</h2>
 							<p>
-								Perple_x, just like with MELTS and MAGPOX, their use it is often considered a challenge, if not of as a full project, due to their steep learning 
+								Perple_X, just like with MELTS and MAGPOX, their use it is often considered a challenge, if not of as a full project, due to their steep learning 
 								curve and difficulties of use. We believe that this needs to change, these programs are incredible tools with an even more 
 								incredible potential, and great people went through a titanic effort over decades so that we could have a chance to use them. 
 								If we remove their difficulties of use and unify the way we interface to them, we can provide an environment where 
@@ -100,8 +105,22 @@
 								them with a woodcutter we will be able to build anything between a chair and a house. How many tools you think we can fit in our 
 								shed? What would you like to build? I assure you, it can be done if we keep working on this.
 							</p>
+							<div class="inner" id="code">
+							<h2>Code and data availability</h2>
+							<p>
+								Data will not be made available until publication.
+							</p>
+							<p>
+								A limited functionality version of the code is available through GitHub	
+								<a href="https://github.com/DanielAstudilloM/Auto_Perple_X-LPSC-2022" class="icon brands fa-github" target="_blank" rel="noreferrer noopener">
+									<span class="label">Github</span></a>. 
+								Full code will be released at publication.
+							</p>
+							</div>
 						</div>
 					</section>
+
+						
 
 			</div>
 
@@ -109,7 +128,7 @@
 			<footer id="footer" class="wrapper alt">
 				<div class="inner">
 					<ul class="menu">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; Daniel Astudillo. All rights reserved.</li><li>Design: Modified from Hyperspace template from <a href="http://html5up.net">HTML5 UP</li>
 					</ul>
 				</div>
 			</footer>
