--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 							There haven't been studies dedicated to assess if the software used for modelling 
 							equilibrium of phases in lunar basalts. It has been done previously for Earth
 							 (<a href="https://doi.org/10.1093/petrology/egh043">Asimow and Longhi, 2004</a>)
-							 and for Mars (<a href="https://doi.org/10.1002/2013JE004461">Balta and McSween, 2013</a>)
+							 and for Mars (<a href="https://doi.org/10.1002/2013JE004461">Balta and McSween, 2013</a>).
 							 We decided to explore this by modelling the compositions of known primary basalts and seeing where their Multiple 
 							 Saturation Points (MSPs) were predicted in relation to their experiments. Initially we began doing this through 
 							 MAGPOX and pMELTS, but recently added Perple_X with excellent results.
@@ -67,7 +67,7 @@
 									exploring the distribution of cumulate sources
 									in the lunar mantle. They accurately reflect the depths at which primary basalts form at, and the phases that melt 
 									to do so. They also are a single point in phase diagrams that allows to check how accurately the olivine and pyroxene
-									stability fields are modeled.
+									stability fields are modelled.
 								</p>
 							</section>
 							<section>
