--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 									thay are only just starting to prove how far they can take us. By removing some of the barriers that difficulted 
 									the use of these programs it is now easier than ever to explore your petrologic ideas through modelling. We have already 
 									started doing so with our good friend Kim Cone, by currently working on an automatic Lunar Magma Ocean crystallization 
-									modeler using Perple_X.
+									modeller using Perple_X.
 								</p>
 							</section>
 						</div>
